<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_01"
    >

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/Text_Login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"

            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/login_username"
                />
            <EditText
                android:id="@+id/LoginEmailInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:hint="@string/Hint_LoginEmail"
                android:inputType="text"
                android:textSize="25sp"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"

        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/login_password"
            />
        <EditText
            android:id="@+id/LoginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:hint="@string/Hint_LoginPassword"
            android:inputType="textPassword"
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:text="@string/Doctor_Text"
            android:textSize="15sp"

            android:textStyle="bold" />

        <Switch
            android:id="@+id/LoginDoctorSwitch"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="15dp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        >


        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button_Login"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ButtonJoinNow"
            android:text="@string/Button_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/ButtonContactUs"
            android:text="@string/Button_ContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            style="@style/Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>

</LinearLayout>