<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity02"
    android:background="@drawable/bg_03"

    >
    <!-- Bottom buttons -->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#40FFFFFF"
        >

        <Button
            android:id="@+id/Registration_ButtonOk"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_RegistrationOk"
            android:background="@drawable/custom_button"
            android:layout_marginRight="20dp"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/Registration_ButtonCancel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_RegistrationCancel"
            android:background="@drawable/custom_button"
            android:textSize="20dp"
            />

    </LinearLayout>

    <!-- Contents -->
    <ScrollView
        android:id="@+id/Registration_Contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >

            <!-- First Name -->
            <EditText
                android:id="@+id/Registration_FirstName"
                android:hint="@string/Text_FirstName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user_registration_name"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="35dp"
                />

            <!-- Last Name -->
            <EditText
                android:id="@+id/Registration_LastName"
                android:hint="@string/Text_LastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user_registration_name"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="35dp"
                />

            <!-- Email -->
            <EditText
                android:id="@+id/Registration_Email"
                android:hint="@string/Text_Email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user_registration_email"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="35dp"
                />

            <!-- Password -->
            <EditText
                android:id="@+id/Registration_Password"
                android:hint="@string/Text_Password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:inputType="text"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user_registration_password"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="35dp"
                />

            <!-- Confirm Password -->
            <EditText
                android:id="@+id/Registration_ConfirmPassword"
                android:hint="@string/Text_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:inputType="text"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user_registration_password"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="35dp"
                />

            <!-- Patient Personal Info -->
            <include layout="@layout/patient_personal_info"></include>

        </LinearLayout>

    </ScrollView>




</RelativeLayout>