<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Gender -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Gender"
                android:textSize="20dp"/>

            <Spinner
                android:id="@+id/PersonalInfo_Gender"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:entries="@array/gender"
                android:layout_marginLeft="40dp"
                android:background="@drawable/custom_input"
                />

        </LinearLayout>

        <!-- Dob -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Dob"
                android:textSize="20dp"/>

            <DatePicker
                android:id="@+id/PersonalInfo_Dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:background="@drawable/custom_input"/>

        </LinearLayout>

        <!-- Height -->
        <EditText
            android:id="@+id/PersonalInfo_Height"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:textSize="20dp"
            android:drawableStart="@drawable/user_registration_height"
            android:background="@drawable/custom_input"
            android:hint="@string/Text_Height"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:layout_marginTop="35dp"
            />


        <!-- Weight -->
        <EditText
            android:id="@+id/PersonalInfo_Weight"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:textSize="20dp"
            android:drawableStart="@drawable/user_registration_height"
            android:hint="@string/Text_Weight"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:layout_marginTop="35dp"/>

        <!-- GP -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_GP"
                android:textSize="20dp"/>

            <Spinner
                android:id="@+id/PersonalInfo_GP"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/custom_input"

                />
        </LinearLayout>



    </LinearLayout>




</LinearLayout>